leaderboard gaps fix and UI fix for non-standard screens

--- a/app/globals.css
+++ b/app/globals.css
@@ -59,6 +59,28 @@ html, body {
   overflow-y: auto;
   scroll-behavior: smooth;
 }
+@media screen and (max-width: 1440px) {
+  html {
+    font-size: 15px;
+  }
+}
+
+@media screen and (max-width: 1280px) {
+  html {
+    font-size: 14px;
+  }
+}
+
+@media screen and (max-width: 1024px) {
+  html {
+    font-size: 13px;
+  }
+}
+
+.overflow-safe {
+  max-width: 100vw;
+  overflow-x: hidden;
+}
 
 html, body {
   scrollbar-width: none;
